[package]
name = "emerald-vault-node"
version = "0.2.2-0.26.2"
authors = ["Igor Artamonov <igor@artamonov.ru>"]
license = "Apache-2.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "emerald_vault_node"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
emerald-vault-core = "0.26.2"
#emerald-vault-core = { path = "../../emerald-rs/emerald-core"}
uuid = "0.5.1"
hex = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.99"