[package]
name = "emerald-vault-node"
version = "0.5.0-0.27.0"
authors = ["Igor Artamonov <igor@artamonov.ru>"]
license = "Apache-2.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "emerald_vault_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.2"

[dependencies]
neon = "0.3.2"
#emerald-vault-core = "0.27.0"
emerald_vault_core = { path = "../../emerald-rs/emerald-core" }
#emerald-vault-core = { git = "https://github.com/emeraldpay/emerald-vault", branch = "feat/storage-v3" }
emerald_vault_migrate = { path = "../../emerald-rs/emerald-vault-migrate" }
uuid = { version = "0.6", features = ["serde", "v4"] }
hex = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.99"